Update personalize page

--- a/leonorejoao/templates/main/personalize.html
+++ b/leonorejoao/templates/main/personalize.html
@@ -7,6 +7,12 @@
         <div class="model_to_edit">
             <a href="{{url_for('create.product')}}"> Criar um novo produto </a>
         </div>
+        <div class="model_to_edit">
+            <a href="{{url_for('create.hotel')}}"> Criar um novo hotel </a>
+        </div>
+        <div class="model_to_edit">
+            <a href="{{url_for('create.faq')}}"> Criar uma nova faq </a>
+        </div>
     </div>
     <div class="edit_block_container">
         <h1>Editar</h1>
@@ -21,6 +27,12 @@
         </div>
         <div class="model_to_edit">
             <a href="{{url_for('edit.confirmations')}}"> Para editar confirmações </a>
+        </div>
+        <div class="model_to_edit">
+            <a href="{{url_for('edit.hotels')}}"> Para editar hoteis </a>
+        </div>
+        <div class="model_to_edit">
+            <a href="{{url_for('edit.faqs')}}"> Para editar faqs </a>
         </div>
     </div>
     <div class="edit_block_container">
