Correction of phone picture

--- a/leonorejoao/static/style/phone_styles.css
+++ b/leonorejoao/static/style/phone_styles.css
@@ -65,14 +65,29 @@
         background-attachment: scroll!important;
     }
 
+    .text_wed_info{
+        background-color: rgba(1,1,1,0.4)!important;
+        padding-top: 3rem!important;
+    }
+
+    .info_align_left{
+        padding: 4rem!important;
+    }
+    
+    .info_align_right{
+        padding: 4rem!important;
+    }
+
     .info_align_right .text_wed_info_block{
         padding-right: 0!important;
         padding-top: 0!important;
+        width: 100%!important;
     }
 
     .info_align_left .text_wed_info_block{
         padding-left: 0!important;
         padding-top: 0!important;
+        width: 100%!important;
     }
 
     .flexi-box {
