--- a/leonorejoao/templates/main/index.html
+++ b/leonorejoao/templates/main/index.html
@@ -19,13 +19,13 @@
                         <div class="text_wed_info_block index_block_text">
                             <p id="indicacoes" class="slidingAppearingDivsLeft"> Capela de Nossa Senhora de Lourdes , <br> Quinta da Costeira </p>
                             <button class="show_map slidingAppearingDivsRight" onclick="revealMap(this,'map_ribeiro')"> Mostrar mapa</button>
-                            <iframe id="map_ribeiro" class="slidingAppearingDivsRight" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d384126.547651335!2d-8.753312037309177!3d41.222017737908885!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd24917c6a9fc9b3%3A0xca747c16a9de30c1!2sQuinta%20de%20Segade!5e0!3m2!1spt-PT!2spt!4v1654720137204!5m2!1spt-PT!2spt" 
+                            <iframe id="map_ribeiro" class="slidingAppearingDivsRight" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15150.51783610726!2d-8.41259902687641!3d40.88014033597952!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x90b8340f932c0bbc!2sQuinta%20da%20Costeira!5e0!3m2!1sen!2spt!4v1659009919308!5m2!1sen!2spt" 
                             width="90%" height="100%" frameborder="0" style="border:0;display: none;" allowfullscreen="" aria-hidden="false" tabindex="0", padding-bottom="30px"></iframe>
                         </div>
                     </div>
                     <div class="info_align_right">
                         <div class="text_wed_info_block index_block_text">
-                            <p id="indicacoes" class="slidingAppearingDivsLeft"> Hoteis perto da quinta </p>
+                            <p id="indicacoes" class="slidingAppearingDivsLeft"> Hotéis perto da quinta </p>
                             {% for hotel in hotels %}
                                 {{ hotel_cards.hotel_card(hotel)}}
                             {% endfor %}
