--- a/leonorejoao/templates/main/personalize.html
+++ b/leonorejoao/templates/main/personalize.html
@@ -29,7 +29,7 @@
             <a href="{{url_for('edit.confirmations')}}"> Para editar confirmações </a>
         </div>
         <div class="model_to_edit">
-            <a href="{{url_for('edit.hotels')}}"> Para editar hoteis </a>
+            <a href="{{url_for('edit.hotels')}}"> Para editar hotéis </a>
         </div>
         <div class="model_to_edit">
             <a href="{{url_for('edit.faqs')}}"> Para editar faqs </a>
