--- a/leonorejoao/static/style/styles.css
+++ b/leonorejoao/static/style/styles.css
@@ -220,8 +220,8 @@ body, html {
 .products_background{
   background: url('/static/images/products_all_background.jpg'); 
   box-shadow: inset 0 0 0 1000px rgb(255 255 255 / 74%);
-  min-height:100%;
-  background-position: 50% 58%;
+  min-height:100vh;
+  background-position: 95% 0%;
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment:scroll;
@@ -233,7 +233,7 @@ body, html {
 
 .product_background{
   box-shadow: inset 0 0 0 1000px rgb(255 255 255 / 74%);
-  min-height:100%;
+  min-height:100vh;
   background-attachment: fixed;
   background-repeat: no-repeat!important;
   background-size: cover!important;
@@ -715,6 +715,7 @@ button:focus {
   background-color: rgba(255,255,255,1);
   border: 1px solid black;
   border-radius: 10px;
+  height: 100%;
 }
 
 .product_container_column{
