--- a/leonorejoao/static/style/phone_styles.css
+++ b/leonorejoao/static/style/phone_styles.css
@@ -176,4 +176,8 @@
     .index_car_container{
         min-height: 4rem!important;
     }
+
+    .hotel_card {
+        width: 80vw!important;
+    }
 }
