--- a/leonorejoao/static/style/styles.css
+++ b/leonorejoao/static/style/styles.css
@@ -221,7 +221,7 @@ body, html {
   background: url('/static/images/products_all_background.jpg'); 
   box-shadow: inset 0 0 0 1000px rgb(255 255 255 / 74%);
   min-height:100vh;
-  background-position: 95% 0%;
+  background-position: 80% 0%;
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment:scroll;
@@ -712,7 +712,7 @@ button:focus {
 .product_card{
   padding: 1rem;
   margin: 1rem;
-  background-color: rgba(255,255,255,1);
+  background-color: rgba(255,255,255,0.2);
   border: 1px solid black;
   border-radius: 10px;
   height: 100%;
@@ -1291,7 +1291,9 @@ label{
 }
 
 .hotel_card {
+  width: 30vw;
   border: 1px solid white;
   border-radius: 1rem;
   padding: 1rem;
+  margin-bottom: 1rem;
 }
