--- a/leonorejoao/templates/main/index.html
+++ b/leonorejoao/templates/main/index.html
@@ -25,7 +25,7 @@
                     </div>
                     <div class="info_align_right">
                         <div class="text_wed_info_block index_block_text">
-                            <p id="indicacoes" class="slidingAppearingDivsLeft"> Hotéis perto da quinta </p>
+                            <p id="indicacoes" class="slidingAppearingDivsLeft"> Alojamento perto da quinta </p>
                             {% for hotel in hotels %}
                                 {{ hotel_cards.hotel_card(hotel)}}
                             {% endfor %}
