--- a/leonorejoao/templates/main/index.html
+++ b/leonorejoao/templates/main/index.html
@@ -8,6 +8,7 @@
             <div class="text_wed_align">
                 <div class="loading_animation" id="website_title"> <b>{{information['title']}} </b></div>
                 <div class="loading_animation extra_info">1/10, 14:00</div>
+                <div class="dresscode">Dress code: Fraque</div>
                 {% set url = url_for('confirmations.confirmation') %}
                 <button class="rsvp_button" data-url="{{url}}" onclick="redirectTo(this)"> RSVP </button>
             </div>
